# solar-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SE  build.sh
App/: main.cpp
Fera/include/Fera/: Fera.hpp  Meshing.hpp  Types.hpp
Fera/include/Fera/Backends/: OBJ.hpp
Fera/include/Fera/Meshing/: Mesh.hpp  MeshUnit.hpp
Fera/include/Fera/Types/: Basic.hpp  Mesh.hpp  Vector.hpp
Fera/include/Types/: Basic.hpp
Fera/src/Fera/Meshing/: Decode.cpp  Mesh.cpp  MeshUnit.cpp
Fera/src/Fera/Types/: Mesh.cpp
Fera/src/Fera/Types/Mesh/: Create.cpp  Get.cpp  Unit.cpp  Value.cpp
Game/: Settings.jsonc
Game/Levels/Room00/: Level.jsonc  Recipes.jsonc
Game/Meshes/: Cube.jsonc  Square.jsonc
Game/Objects/Room00/: Grass00.jsonc
Game/Shaders/: Basic.jsonc
Game/Shaders/OpenGL/: Basic.frag  Basic.vert
Logica/include/Logica/: Config.hpp  Control.hpp  Data.hpp  Logica.hpp  Texting.hpp  Types.hpp
Logica/include/Logica/Control/: Validator.hpp
Logica/include/Logica/Data/: File.hpp  String.hpp
Logica/include/Logica/Texting/: Is.hpp  Split.hpp  Tokenizer.hpp
Logica/include/Logica/Texting/Is/: Number.hpp
Logica/include/Logica/Texting/Tokenizer/: Instance.hpp  Rules.hpp
Logica/include/Logica/Types/: Basic.hpp  Buffer.hpp  Functions.hpp  Stream.hpp
Logica/include/Logica/Types/Buffer/: Base.hpp  File.hpp
Logica/include/Logica/Types/Stream/: Buffer.hpp  File.hpp
Logica/src/Logica/Control/: Validator.cpp
Logica/src/Logica/Data/: File.cpp  String.cpp
Logica/src/Logica/Texting/: Split.cpp
Logica/src/Logica/Texting/Is/: Number.cpp
Logica/src/Logica/Texting/Tokenizer/: GetToken.cpp  Instance.cpp  Rules.cpp
Logica/src/Logica/Types/: Stream.cpp
Logica/src/Logica/Types/Buffer/: Base.cpp  File.cpp
Logica/src/Logica/Types/Stream/: Buffer.cpp  File.cpp
Mewko/: fe64cc.py  mwkcc.py
Mewko/Logistica/: __init__.py
Mewko/Logistica/Buffer/: File.py  Generic.py  String.py  __init__.py
Mewko/Logistica/Control/: Validator.py  __init__.py
Mewko/Logistica/Texting/: Rules.py
Progator/include/Progator/: Backends.hpp  Base.hpp  Config.hpp  Objects.hpp  Progator.hpp  Types.hpp  Validator.hpp
Progator/include/Progator/Backends/: OpenGL.hpp
Progator/include/Progator/Backends/OpenGL/: Mesh.hpp  Renderer.hpp  Shader.hpp  Types.hpp  UniformBufferObject.hpp  (+1 more)
Progator/include/Progator/Base/: Pointers.hpp  Renderer.hpp  Window.hpp
Progator/include/Progator/Objects/: Mesh.hpp  Shader.hpp
Progator/include/Progator/Types/: Basic.hpp  GLM.hpp  SDL.hpp  Specifics.hpp  Tuning.hpp
Progator/src/Progator/: Progator.cpp
Progator/src/Progator/Base/: Pointers.cpp  Renderer.cpp  Window.cpp
Progator/src/Progator/Objects/: Mesh.cpp  Shader.cpp
Root/: A.jsonc  Settings.jsonc  Settings.scs  Settings.sec
Root/Shaders/OpenGL/: BasicView.frag  BasicView.vert  BasicVoxels.frag  BasicVoxels.vert
Sojson/include/: Sojson.hpp
Sojson/include/Sojson/: Config.hpp  Decode.hpp  Decorators.hpp  Node.hpp  Sojson.hpp  Types.hpp
Sojson/include/Sojson/Decode/: Instance.hpp  Is.hpp
Sojson/include/Sojson/Node/: Casting.hpp  Get.hpp  Structure.hpp
Sojson/include/Sojson/Types/: Basic.hpp  Node.hpp
Sojson/src/Sojson/Decode/: Instance.cpp  Is.cpp
Sojson/src/Sojson/Node/: Casting.cpp  Get.cpp  Structure.cpp
Sojson/src/Sojson/Types/: Node.cpp
Solar/Shaders/: Default.frag  Default.vert
Solar/include/Solar/: Config.hpp  Core.hpp  Instance.hpp  Modes.hpp  Solar.hpp  Types.hpp  Validator.hpp
Solar/include/Solar/Core/: Basics.hpp  Graphics.hpp  Provider.hpp  Shared.hpp
Solar/include/Solar/Instance/: Draw.hpp  Init.hpp  Loop.hpp  Quit.hpp  Structure.hpp  Tick.hpp
Solar/include/Solar/Modes/: Scene.hpp
Solar/include/Solar/Types/: Basic.hpp  GLM.hpp  Progator.hpp  Sojson.hpp
Solar/src/Solar/Core/: Basics.cpp  Graphics.cpp  Shared.cpp
Solar/src/Solar/Instance/: Draw.cpp  Init.cpp  Loop.cpp  Quit.cpp  Structure.cpp  Tick.cpp
include/Fera/: Backends.hpp  Config.hpp
include/Logica/: Data.hpp  Texting.hpp  Types.hpp
include/Logica/Texting/Tokenizer/: Rules.hpp
include/Logica/Types/: Stream.hpp
include/Lucie/: Decoder.hpp  Encoder.hpp  Lucie.hpp  Text.hpp  Types.hpp
include/Progator/: Mesh.hpp  Pointers.hpp  Progator.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Types.hpp  Validator.hpp  Values.hpp  Window.hpp
include/Progator/Backends/Metal/: .stub
include/Progator/Backends/OpenGL/: Backend.hpp  Basics.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Window.hpp
include/Progator/Backends/Vulkan/: .stub
include/Progator/Support/: FS.hpp  Math.hpp
include/Sojson/: Types.hpp
include/Sojson/Decode/: Parsing.hpp
include/Solar/: Config.hxx  Core.hpp  GL.hxx  Instance.hpp  Instance.hxx  Solar.hpp  Types.hpp  Types.hxx  Utils.hxx
include/Solar/Components/: Cube.hxx  Model.hxx  Plane.hxx  World.hxx
include/Solar/Core/: Shared.hxx  Storage.hxx  Window.hxx
include/Solar/Engine/: Provider.hpp
include/Solar/Math/: Color.hxx  Color3.hxx  Vector2.hxx  Vector3.hxx
include/Solar/Scene/: Camera.hpp  FreeCamera.hxx  Level.hpp  Level.hxx  Mode.hpp  Mode.hxx  Model.hpp  Shapes.hpp  Tile.hxx
include/Solar/Shapes/: Cube.hxx  Mesh.hxx  Model.hxx  Plane.hxx  World.hxx
include/Solar/Support/: FS.hpp
include/Solar/Support/DotObj/: Loader.hpp  Text.hpp
src/: Main.cpp
src/Logica/Texting/Tokenizer/: Instance.cpp
src/Lucie/: Decoder.cpp  Text.cpp
src/Progator/: Mesh.cpp  Pointers.cpp  Progator.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Validator.cpp  Window.cpp
src/Progator/Backends/OpenGL/: Basics.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/Progator/Support/: FS.cpp
src/Solar/: Core.cpp  Instance.cpp  Instance.cxx  main.cxx
src/Solar/Components/: Cube.cxx  Model.cxx  Plane.cxx
src/Solar/Core/: Storage.cxx  Window.cxx
src/Solar/Engine/: Provider.cpp
src/Solar/Scene/: Camera.cpp  FreeCamera.cxx  Level.cpp  Mode.cpp  Mode.cxx  Model.cpp
src/Solar/Shapes/: Cube.cxx  Mesh.cxx  Model.cxx  Plane.cxx
src/Solar/Support/: FS.cpp
src/Solar/Support/DotObj/: Loader.cpp  Text.cpp
tests/: cube.txt  pkd_model  pkd_model.c
(+96 files in other folders)
